<resources>
    <string name="app_name">Weather</string>
    <string name="city_is_not_selected">City is not selected</string>
    <string name="today_overview">Today overview</string>
    <string name="hourly">Hourly</string>
    <string name="max_temp">Max temp</string>
    <string name="min_temp">Min temp</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="feels_like">Feels like %1$s</string>
    <string name="nothing_found_for_your_request">Nothing found for your request</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="start_your_search">Start typing city name</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="see_forecast">see forecast</string>
    <string name="show_week">show week</string>
    <string name="week_forecast">Week forecast</string>
    <string name="search_city">Search city</string>
</resources>