<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_search"
                app:drawableTint="?colorOnPrimary"
                app:layout_constraintBottom_toBottomOf="@id/tv_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_city"
                app:layout_constraintTop_toTopOf="@id/tv_city"
                app:tint="?colorOnPrimary" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round"
                android:textColor="?attr/colorOnSecondary"
                android:backgroundTint="?attr/colorSecondaryVariant"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical|start"
                android:paddingVertical="6dp"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"
                android:textAppearance="@style/Text.Semibold.24"
                app:drawableTint="?attr/colorOnSecondary"
                app:layout_constraintEnd_toStartOf="@id/iv_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Moscow" />

            <include
                android:id="@+id/current_weather"
                layout="@layout/current_weather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_city" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_today_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/today_overview"
                android:textAppearance="@style/Text.Bold.20"
                app:layout_constraintTop_toBottomOf="@id/current_weather" />

            <include
                android:id="@+id/today_overview"
                layout="@layout/today_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_today_overview" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_hourly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/hourly"
                android:textAppearance="@style/Text.Bold.20"
                app:layout_constraintTop_toBottomOf="@id/today_overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_hourly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_hourly"
                tools:listitem="@layout/item_hour" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_tomorrow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tomorrow"
                android:textAppearance="@style/Text.Bold.20"
                app:layout_constraintEnd_toStartOf="@id/btn_forecast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_hourly" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_forecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.4"
                android:backgroundTint="?colorSecondaryVariant"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:text="@string/show_week"
                android:textAppearance="@style/Text.Semibold.16"
                app:drawableTint="?colorOnPrimary"
                app:layout_constraintBottom_toBottomOf="@id/tv_tomorrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_tomorrow"
                app:layout_constraintTop_toTopOf="@id/tv_tomorrow" />

            <include
                android:id="@+id/tomorrow"
                layout="@layout/item_forecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_tomorrow" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/main_group"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="visible"
                app:constraint_referenced_ids="tv_city,iv_search,btn_forecast,today_overview,current_weather,tv_today_overview,tv_hourly,rv_hourly,tv_tomorrow,tomorrow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
